@@ -3,6 +3,7 @@
 	* GetFileAttributesA() and GetFileAttributesW() replacements
 	* WaitForSingleObject() replacement
 	* LoadLibraryW() replacement
+	* CreateFileW() replacement
 
 2013-01-21  Jean-Baptiste Kempf  <jbvideolan.org>
 
